--- a/Classes/main/webview/progress/HCPCMPayProgress.xib
+++ b/Classes/main/webview/progress/HCPCMPayProgress.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="82" height="75"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_3604.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="eXZ-q6-ZDQ">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="apple-touch-icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="eXZ-q6-ZDQ">
                     <rect key="frame" x="18.5" y="8" width="45" height="45"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="45" id="S8D-NI-4yS"/>
@@ -82,7 +82,7 @@
         </view>
     </objects>
     <resources>
-        <image name="IMG_3604.JPG" width="810" height="1080"/>
+        <image name="apple-touch-icon.png" width="60" height="60"/>
         <image name="hebaoGrayPoint.png" width="30" height="30"/>
         <image name="hebaoWhitePoint.png" width="30" height="30"/>
     </resources>
